complete frontend for Post creater /Fix some overflow layouts

--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -6,13 +6,13 @@
     --login-txt-color:black;
 }
 [data-theme='dark-yellow']{
-    --bg-color: rgb(13, 13, 13);
+    --bg-color: rgb(0, 0, 0);
     --text-color: #fff700;
     --p-text-color:#fbff7d;
     --login-txt-color:white;
 }
 [data-theme='dark-white']{
-    --bg-color:rgb(13,13,13);
+    --bg-color:rgb(0, 0, 0);
     --text-color: white;
     --p-text-color:whitesmoke;
     --login-txt-color:white;
@@ -25,7 +25,7 @@
 body{
     margin: 0px; padding: 0px;
     background-color: var(--bg-color);
-    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg');
+    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg'); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -601,7 +601,7 @@ form>h1>span{
     .routeContainer{
         width: 100vw !important;
         left: 0px !important;
-        padding-bottom: 70px;
+        padding-bottom: 90px !important;
     }
     form{
         padding: none !important;
@@ -732,7 +732,7 @@ form>h1>span{
     border: 1px solid;
     opacity: 1 !important;
     position: absolute;
-    top: -100px; left: 150px;
+    top: -150px; left: 150px;
 
     animation: slideIn .7s ease-in forwards;
     
@@ -754,6 +754,7 @@ form>h1>span{
     left: 13vw;
     top: 50px;
     z-index: -1;
+    padding-bottom: 10px;
 }
 @media (max-width:1024px) {
     .routeContainer{
