--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -4,24 +4,98 @@
     align-items: center;
     flex-direction: column;
     padding-inline: calc(var(--spacing) * 1);
-    border: 1px solid white;
-    height: 800px;
-}
-select {
-  background-color: #1e1e1e;
-  color: #ffffff;
-  border: 1px solid #444;
-  padding: 8px 12px;
-  border-radius: 8px;
-  outline: none;
-  font-size: 14px;
-  cursor: pointer;
+    border: 1px solid #777;
+    border-radius: 15px;
+    padding: 10px;
+    gap: 10px;
+    
+    box-shadow: inset 0 0 25px 5px rgba(0, 0, 0 , 0.4);
+
+    .optionDiv{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+         background: rgba(50, 50, 50 , 0.4);
+        backdrop-filter: blur(10px);
+        border-radius: 8px;
+        -webkit-backdrop-filter: blur(10px);
+
+        .SecDiv{
+            padding: 20px;
+            border-bottom: 1px solid gray;
+           
+
+            select{
+                background-color: var(--bg-color);
+                color: var(--text-color);
+                border: 1px solid #444;
+                padding: 8px 12px;
+                border-radius: 8px;
+                outline: none;
+                font-size: 14px;
+                cursor: pointer;
+
+                option{
+                    background-color: var(--bg-color);
+                    color: var(--text-color);
+                }
+            }
+            select:focus{
+                border-color: rgb(20, 149, 153) ;
+            }
+        }
+    }
+
+    h2{
+        font-size: large;
+        font-weight: bold;
+        color: var(--text-color);
+    }
+    .controllerDiv{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+        background: rgba(50, 50, 50 , 0.4);
+        backdrop-filter: blur(10px);
+        border-radius: 8px;
+        -webkit-backdrop-filter: blur(10px);
+
+        .promulgatDiv{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            padding: 5px;
+            gap: 10px;
+
+            textarea{
+                resize: none;
+                scrollbar-width: none;
+                height: 200px;
+                width: 300px;
+                border-radius: 15px;
+                border: 1px solid #444;
+                outline: none;
+                padding: 5px;
+            }
+            textarea::-webkit-scrollbar{
+                display: none;
+            }
+        }
+        .blockCat{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 5px;
+
+            
+        }
+    }
 }
 
-select option {
-  background-color: #1e1e1e;
-  color: #ffffff;
-}
-select:focus {
-  border-color: #777;
-}
